[gd_scene load_steps=6 format=3 uid="uid://bx27nhohdfw1i"]

[ext_resource type="Script" path="res://Scripts/Attacks/Mine/mine.gd" id="1_u3owd"]
[ext_resource type="Texture2D" uid="uid://dyd7fj4c7o5uc" path="res://Sprites/Attacks/Mine/mine.png" id="2_w87oa"]
[ext_resource type="Texture2D" uid="uid://yybdtvp0c86n" path="res://Sprites/Attacks/Mine/explosion.png" id="3_k4prd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ina00"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jo3ws"]
radius = 150.0

[node name="Mine" type="Node2D"]
scale = Vector2(1e-05, 1e-05)
script = ExtResource("1_u3owd")

[node name="MineSprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_w87oa")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_ina00")

[node name="AttackBody" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBody"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_jo3ws")

[node name="Sprite2D" type="Sprite2D" parent="AttackBody/CollisionShape2D"]
texture = ExtResource("3_k4prd")

[node name="Duration" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AttackBody" to="." method="_on_attack_body_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
